@@ -13,20 +13,18 @@ final class SourceReferenceFormatter {
     Optional<String> format(SourceReference sourceReference) {
         if (sourceReference.getJavaMethod().isPresent()) {
             return sourceReference.getJavaMethod()
-                    .map(javaMethod -> String.format(
-                        "%s.%s(%s)",
-                        javaMethod.getClassName(),
-                        javaMethod.getMethodName(),
-                        String.join(",", javaMethod.getMethodParameterTypes())));
+                    .map(javaMethod -> "%s.%s(%s)".formatted(
+                            javaMethod.getClassName(),
+                            javaMethod.getMethodName(),
+                            String.join(",", javaMethod.getMethodParameterTypes())));
         }
         if (sourceReference.getJavaStackTraceElement().isPresent()) {
             return sourceReference.getJavaStackTraceElement()
-                    .map(javaStackTraceElement -> String.format(
-                        "%s.%s(%s%s)",
-                        javaStackTraceElement.getClassName(),
-                        javaStackTraceElement.getMethodName(),
-                        javaStackTraceElement.getFileName(),
-                        sourceReference.getLocation().map(Location::getLine).map(line -> ":" + line).orElse("")));
+                    .map(javaStackTraceElement -> "%s.%s(%s%s)".formatted(
+                            javaStackTraceElement.getClassName(),
+                            javaStackTraceElement.getMethodName(),
+                            javaStackTraceElement.getFileName(),
+                            sourceReference.getLocation().map(Location::getLine).map(line -> ":" + line).orElse("")));
         }
         if (sourceReference.getUri().isPresent()) {
             return sourceReference.getUri()
